--- a/blackscholes.ipynb
+++ b/blackscholes.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "Definitions:\n",
     "\n",
-    "1) Brownian Motion at time $\\it{t}$ as $\\it{B_{\\it{t}}}$\n",
+    "1) Brownian Motion at time $\\it{t}$ as $\\it{B_{\\it{t}}}$ $\\it{\\text{(note: In some other text, this is commonly referred to as } W_{t} \\text{)}}$ \n",
     "\n",
     "2) $\\it{B_{0}} := 0$ which is the standard Brownian Motion assumption\n",
     "\n",
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show how delta is stable across expires\n",
+    "# Show how delta is stable across expires \n",
     "# F_example = 100\n",
     "# sigma_example = 0.2\n",
     "# r_example = 0.05"
