--- a/blackscholes.ipynb
+++ b/blackscholes.ipynb
@@ -346,12 +346,15 @@
     "## Greeks: Theta\n",
     "\n",
     "1. Theta, $\\theta$, defined as $ \\frac{\\partial C}{\\partial t} $ <br>\n",
-    "2. 2 Primary Components: Interest Rate & Volatility\n",
-    "   1. Formula : $ \\Omega = r\\it{X}e^{-rt} + e^{-rt}\\frac{\\partial \\it{X}}{\\partial t}$\n",
-    "   2. First term is $\\Omega _{r}$\n",
-    "   3. Second term is $\\Omega _{t}$\n",
+    "2. Two Primary Components: Interest Rate & Volatility\n",
+    "   1. Formula : $ \\Theta = r\\it{X}e^{-rt} + e^{-rt}\\frac{\\partial \\it{X}}{\\partial t}$\n",
+    "   2. First term is $\\Theta _{r}$\n",
+    "   3. Second term is $\\Theta _{t}$\n",
     "   4. $ \\it{X} = e^{rt} C $; which is the undiscounted price of option\n",
-    "3. $ 0.5 \\$\\Gamma \\sigma^{2} + \\Omega _{t} = 0 $ "
+    "   5. $\\Theta$ is martingale, meaning its best price estimate is based on current price estimate.\n",
+    "   6. is most stable across expires for fixed, normalized log-moneyness\n",
+    "3. $ 0.5 \\$\\Gamma \\sigma^{2} + \\Omega _{t} = 0 $ -> Implies that volatility theta is related to cash gamma.\n",
+    "   1. Easily derived from seeing the previous markup"
    ]
   },
   {
@@ -368,6 +371,51 @@
      "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xt = np.exp(r * t) * C\n",
+    "\n",
+    "Theta_r = np.exp(-r * t) * Xt \n",
+    "# Theta_sigma = np.exp(-r * t) * delX/ delT # Need to approximate delX/delT, so this method is not used for now.\n",
+    "Theta_sigma = -0.5 * Cash_gamma * sigma**2\n",
+    "\n",
+    "Theta = Theta_r + Theta_sigma\n",
+    "\n",
+    "Theta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Greeks: Vega\n",
+    "\n",
+    "1. Vega, $\\nu$, defined as $ \\frac{\\partial C}{\\partial \\sigma} $ <br>\n",
+    "2. Two Primary Components: Interest Rate & Volatility\n",
+    "   1. Formula : $ \\Theta = r\\it{X}e^{-rt} + e^{-rt}\\frac{\\partial \\it{X}}{\\partial t}$\n",
+    "   2. First term is $\\Theta _{r}$\n",
+    "   3. Second term is $\\Theta _{t}$\n",
+    "   4. $ \\it{X} = e^{rt} C $; which is the undiscounted price of option\n",
+    "   5. $\\Theta$ is martingale, meaning its best price estimate is based on current price estimate.\n",
+    "   6. is most stable across expires for fixed, normalized log-moneyness\n",
+    "3. $ 0.5 \\$\\Gamma \\sigma^{2} + \\Omega _{t} = 0 $ -> Implies that volatility theta is related to cash gamma.\n",
+    "   1. Easily derived from seeing the previous markup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-117.68877565001432)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
